<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LOF/QDII套利助手</string>
    <string name="settings">设置</string>
    <string name="refresh">刷新</string>
    <string name="lof_tab">LOF基金</string>
    <string name="qdii_tab">QDII基金</string>
    <string name="premium_rate">溢价率</string>
    <string name="t1_premium">T-1溢价率</string>
    <string name="realtime_premium">实时溢价率</string>
    <string name="fund_scale">基金规模</string>
    <string name="volume">成交量</string>
    <string name="amount">成交额</string>
    <string name="subscribe_status">申购状态</string>
    <string name="subscribe_limit">申购限额</string>
    <string name="nav">净值</string>
    <string name="market_price">场内价格</string>
    <string name="data_load_failed">数据获取失败</string>
    <string name="network_error">网络连接失败</string>
    <string name="retry">重试</string>
    <string name="loading">加载中...</string>
    <string name="no_data">暂无数据</string>
    <string name="api_source">数据源</string>
    <string name="api_eastmoney">东方财富</string>
    <string name="api_tiantian">天天基金</string>
    <string name="api_sina">新浪财经</string>
    <string name="subscribe_open">开放申购</string>
    <string name="subscribe_closed">暂停申购</string>
    <string name="subscribe_limited">限额申购</string>
    <string name="sort_by_premium">按溢价率排序</string>
    <string name="sort_by_volume">按成交量排序</string>
    <string name="sort_by_scale">按规模排序</string>
    <string name="filter">筛选</string>
    <string name="min_premium">最小溢价率</string>
    <string name="min_volume">最小成交量</string>
    <string name="apply_filter">应用筛选</string>
    <string name="reset_filter">重置</string>
</resources>
